src/gateway/app/manifests/mongodb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mp4-mp3-mongodb-statefulset
  namespace: mp4-to-mp3
spec:
  selector:
    matchLabels:
      app: mongodb # has to match .spec.template.metadata.labels
  serviceName: mp4-mp3-mongodb-statefulset-svc
  replicas: 1 # by default is 1
  template:
    metadata:
      labels:
        app: mongodb # has to match .spec.selector.matchLabels
    spec:
      containers:
      - name: mongodb
        image: mongo:4.0.17
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: pvc
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: pvc
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
