src/gateway/app/manifests/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
  namespace: mp4-to-mp3
  labels:
    app: gateway

spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: mp4-mp3/gateway:8
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service 
metadata:
  name: gateway-service
  namespace: mp4-to-mp3
spec:
  selector:
    app: gateway
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
