src/gateway/app/manifests/mongodb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mp4-mp3-mongodb-statefulset-svc
  namespace: mp4-to-mp3
spec:
  selector:
    app: mongodb
  clusterIP: None
  ports:
    - port: 27017
      targetPort: 27017
